--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,104 @@
 .App-link {
   color: #61dafb;
 }
+.collapsed2{
+  width: 200px;
+}
+.anticon[tabindex] {
+    margin-left: 32px;
+}
+.ant-layout-header {
+  padding: 0px;
+    width: 100%;
 
+}
+.body{
+  width: 100%;
+  padding: '10px 10px';
+  margin: 10px;
+ border: 1px solid rgba(221, 223, 236, 0.8);
+border-radius: 20px;
+min-height: 500px;
+}
+
+.ant-menu-inline-collapsed .anticon {
+    margin-left: 32px;
+}
+.ant-layout-sider {
+  background-color: white;
+}
+.left{
+  width: 100%;
+  height: 300px;
+  background-color:wheat;
+  border: 1px solid rgba(221, 223, 236, 0.8);
+  border-radius: 10px;
+  margin: 10px ;
+}
+span{
+  font-size: 15px;
+}
+h1{
+font-size: 25px;
+  padding-left: 10px;
+
+}
+h2{
+  font-size: 20px;
+  padding-left: 10px;
+}
+.ant-layout-header {
+    background-color: white;
+}
+
+.cell{
+min-height: 50px;
+line-height: 50px;
+padding-left: 20px;
+  border-bottom: 1px solid rgba(221, 223, 236, 0.8);
+}
+.ant-btn {
+  margin: 5px;
+    height: 30px;
+}
+.collapsed1{
+  width: 100px;
+}
+.menu2{
+  width: 200px;
+}
+.menu1{
+  width: 100px;
+}
+
+
+.ant-menu-vertical .ant-menu-item:not(:last-child), .ant-menu-vertical-left .ant-menu-item:not(:last-child), .ant-menu-vertical-right .ant-menu-item:not(:last-child), .ant-menu-inline .ant-menu-item:not(:last-child) {
+    height: 60px;
+}
+.sidebar{
+  width: 100%;
+}
+.header{
+display: inline-flex;
+  width: 100%;
+}
+.form-control{
+  line-height: 85px;
+  margin-top: 13px;
+      float: right;
+    height: 40px;
+    width: 400px;
+    border-radius: 25px;
+     border: 1px solid rgba(221, 223, 236, 0.8);
+}
+.right-header{
+  width: 85%;
+}
+.home{
+  width: 100%;
+  padding: 0px 0px 0px 10px;
+      background-color: rgba(205, 208, 227, 0.2);
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +132,5 @@
   to {
     transform: rotate(360deg);
   }
+  
 }
